# Prateleira

./: .gitignore  README.md
back-end/: Cargo.toml
back-end/src/: app_state.rs  lib.rs  main.rs
back-end/src/application/services/: author_service.rs  book_service.rs  gender_service.rs  mod.rs  publisher_service.rs  user_service.rs
back-end/src/domain/: mod.rs
back-end/src/domain/entities/: author.rs  book.rs  gender.rs  mod.rs  publisher.rs  user.rs
back-end/src/domain/irepositories/: author_irepository.rs  book_irepository.rs  gender_irepository.rs  iauthor_repository.rs  ibook_repository.rs  igender_repository.rs  ipublisher_repository.rs  iuser_repository.rs  mod.rs  publisher_irepository.rs  user_irepository.rs
back-end/src/infrastructure/: app_state.rs  mod.rs
back-end/src/infrastructure/common/: consts.rs
back-end/src/infrastructure/crypto/: crypto.rs
back-end/src/infrastructure/db/: connection.rs
back-end/src/infrastructure/db/models/: author_row.rs  book_author_row.rs  book_gender_row.rs  book_publisher_row.rs  book_row.rs  gender_row.rs  image_row.rs  mod.rs  publisher_row.rs  user_row.rs
back-end/src/infrastructure/dto/: user_dto.rs
back-end/src/infrastructure/email/: mail.rs
back-end/src/infrastructure/enums/: mod.rs  reading_status.rs
back-end/src/infrastructure/mappers/: author_mapper.rs  book_mapper.rs  gender_mapper.rs  mod.rs  publisher_mapper.rs  user_mapper.rs
back-end/src/infrastructure/repositories/: author_repository.rs  book_repository.rs  gender_repository.rs  mod.rs  publisher_repository.rs  user_repository.rs
back-end/src/presentation/: routes.rs
back-end/src/presentation/controllers/: author_controller.rs  book_controller.rs  gender_controller.rs  mod.rs  publisher_controller.rs  user_controller.rs
back-end/tests/: author_test.rs  gender_test.rs  publisher_test.rs
bd/: bd.sql
front-end/: README.md  index.html  package-lock.json  package.json
front-end/src/: App.tsx  App.vue  main.ts  main.tsx
front-end/src/aplication/routes/: ProjectRoutes.tsx
front-end/src/aplication/services/: AuthorSerice.ts  BookService.ts  GenderService.ts  PublisherService.ts  UserService.ts
front-end/src/routes/: +page.svelte
front-end/src/services/: AuthorSerice.ts  BookService.ts  GenderService.ts  PublisherService.ts  UserService.ts
front-end/src/styles/: index.ts
(+31 files in other folders)
