[package]
name = "back-end"
authors = ["Daniel Roberto de Aguiar"]
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "json", "chrono"]}
axum = { version = "0.8.8", features = ["multipart"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version="0.6.8", features = ["fs"] }
dotenv = "0.15.0"
hex = "0.4.3"
base64 = "0.22.1"
rand = "0.10.0"
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
lettre = "0.11"
image = "0.25.10"

# Cryptografy libraries
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
hmac = "0.12.1"
totp-rs = "5.7.0"
aes-gcm = "0.10.3"


[dev-dependencies]
tower = "0.5.3"
http-body-util = "0.1.3"
mime = "0.3.17"
hyper = "1.8.1"
bytes = "1.11.1"